# models/Order.js
@@ -1,10 +1,13 @@
+const orderStatuses = require("./OrderStatuses");
+
 class Order {
-    constructor (id, idUser, paymentMethod, products){
+    constructor (id, idUser, products, paymentMethod){
         this.id = id;
         this.idUser = idUser;
         this.time = new Date().toLocaleString();
         this.products = products;
         this.paymentMethod = paymentMethod;
+        this.status = orderStatuses.NUEVO;
     }
 }
 
