# routes/products.routes.js
@@ -7,30 +7,30 @@ const productC = require('../controllers/product.controller');
 const { Products, Users } = require('../models/Data');
 
 // Send the list of products
-route.get('/products', userM.idValidation, productC.listProducts);
+route.get('/products', userM.idHeaderValidation, productC.listProducts);
 
 // Add a new product
 route.post(
     '/products',
-    userM.idValidation, userM.isAdmin, productM.validateNewProduct,
+    userM.idHeaderValidation, userM.isAdmin, productM.validateNewProduct,
     productC.addNewProduct
 );
 
 route.put(
     '/products/:productId',
-    userM.idValidation, userM.isAdmin, productM.idValidation, productM.validateEditProduct,
+    userM.idHeaderValidation, userM.isAdmin, productM.idValidation, productM.validateEditProduct,
     productC.editProduct
 );
 
 route.patch(
     '/products/:productId',
-    userM.idValidation, userM.isAdmin, productM.idValidation, productM.validateProductEnabled,
+    userM.idHeaderValidation, userM.isAdmin, productM.idValidation, productM.validateProductEnabled,
     productC.setProductEnabled
 );
 
 route.delete(
     '/products/:productId',
-    userM.idValidation, userM.isAdmin, productM.idValidation,
+    userM.idHeaderValidation, userM.isAdmin, productM.idValidation,
     productC.deleteProduct
 );
 
